--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,22 @@
 [package]
 name = "zero2prod"
 version = "0.1.0"
+authors = ["Haoqu Ma <mahaoqu@gmail.com>", "Luca Palmieri <contact@lpalmieri.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+# We could use any path here, but we are following the community convention
+# We could specify a library name using the `name` field. If unspecified,
+# cargo will default to `package.name`, which is what we want.
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "zero2prod"
 
 [dependencies]
 actix-web = "4"
+
+[dev-dependencies]
+reqwest = "0.11"
